# machine_learning_marian_desilva_mlops25

./: .gitignore  README.md  pyproject.toml
code-alongs/03_linear_regression.ipynb/: linear_regression.ipynb
code-alongs/04_logistic_regression/: logistic_regression.ipynb
code-alongs/06_random_forest/: random_forest.ipynb
code-alongs/07_pydantic/: person.json  pydantic_basics.ipynb
code-alongs/08_fastapi_crud/: api.py  constants.py  data_processing.py  test_api.ipynb
code-alongs/09_streamlit_frontend/: main.py  pyproject.toml
code-alongs/09_streamlit_frontend/backend/: api.py  constants.py  data_processing.py
code-alongs/09_streamlit_frontend/backend/data/: library.json
code-alongs/09_streamlit_frontend/frontend/: app.py
code-alongs/09_streamlit_frontend/frontend/pages/: book_finder.py  dashboard.py  home.py
code-alongs/10_fastapi_data/: api.py  constants.py  data_processing.py  eda.ipynb
code-alongs/a1_pandas_repitition/: pandas_repetition.ipynb
excercises/0_pandas_repetition/0.car_sales_in_norway/: queries.ipynb
excercises/0_pandas_repetition/1.salaries_in_data_field/: salaries_analyze.ipynb
excercises/1_regression/0.eda_1.linear_regression_on_mpg_dataset/: 0.eda.ipynb
excercises/1_regression/2.linear_regression_on_house_data/: linear_regression.ipynb
excercises/2_classification/: 0.iris_flower_dataset.ipynb
excercises/3_pydantic/: 3.theory_questions.md  main.py  pydantic.ipynb  pyproject.toml
excercises/case_bikestore/: bikecase.ipynb
