[project]
name = "machine-learning-marian-desilva-mlops25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "code-alongs/09_streamlit_frontend",
    "excercises/3_pydantic",
]
